# bugcode

./: .gitignore  README.en.md  README.md  main.py  vit.py
algorithm/: CMakeLists.txt  README.md  main.py
algorithm/src/: demo.cpp  leetcode.cpp  leetcode_classic_150.cpp  main.cpp
demo/: freetype.py  readme.md
demo/aes/: readme.md  test.cpp
demo/ffmpeg/: CMakeLists.txt  example.cpp
demo/gstreamer/: gstreamer_test.cpp
demo/httplib/: CMakeLists.txt  Makefile  example.cpp
demo/opencv/: CMakeLists.txt  example.cpp
demo/pybind11/: CMakeLists.txt  example.cpp  test.py
demo/rapidjson/: CMakeLists.txt  example.cpp
demo/spdlog/: CMakeLists.txt
demo/tensorrt/: imagenet_label.txt  main.cpp  main_base.cpp  main_dim.cpp  readme.md  run.sh  tensorrt.cpp  test_thread.cpp
demo/tinyxml2/: CMakeLists.txt  example.cpp
demo_cuda/: kernel.cu  main.cpp
demo_pyside/: main.py
large_model/: readme.md  test_swin.py  test_vit.py
my-app/: package-lock.json  package.json
python/: main.py
python/CLIP-main/: test.py
python/CLIP-main/clip/: model.py
python/detr/: __init__.py
python/detr/disc/: util.py
python/detr/model/: backbone.py
